tests/NormalTests/paczka1/fuzzy1/38738552.err
Error in line 2: A229 A229 69,0
Error in line 16: P1AbhExvbU5 S886 43,19
Error in line 14: p9RW S886 15,1
Error in line 15: 3mQw A229 2,6
Error in line 18: p9RW A229 26,4
Error in line 20: zOfA A229 52,6
Error in line 5: P1AbhExvbU5 S886 9,2
Error in line 27: P1AbhExvbU5 A505 89,9
Error in line 36: zOfA S886 w,w
Error in line 31: WHv1H3c1np S223 81,7
Error in line 30: P1AbhExvbU5 A229 48,5
Error in line 32: p9RW S886 152,0
